crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__variable__undefined_local.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/undefined_local.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (print (global-by-name notDefined))))

----- stderr -----
